--- a/Lab3/src/main/resources/ru/nsu/gorin/lab3/view/GamePreparingWindow.fxml
+++ b/Lab3/src/main/resources/ru/nsu/gorin/lab3/view/GamePreparingWindow.fxml
@@ -9,8 +9,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="gamePrepWindow" prefHeight="500.0" prefWidth="768.0" style="-fx-background-color: #c0c0c0; -fx-border-color: #000000; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nsu.gorin.lab3.controllers.GamePrepWindowController">
+<AnchorPane fx:id="gamePrepWindow" prefHeight="500.0" prefWidth="768.0" style="-fx-background-color: #c0c0c0; -fx-border-color: #000000; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nsu.gorin.lab3.controllers.GamePrepWindowController">
     <children>
         <Label fx:id="nameLabel" alignment="BASELINE_CENTER" contentDisplay="CENTER" layoutX="109.0" layoutY="65.0" prefHeight="116.0" prefWidth="555.0" style="-fx-background-color: #ff0000; -fx-border-color: #000000; -fx-border-width: 5;" text="MINESWEEPER" textFill="#000000de" translateY="-25.0">
             <font>
@@ -133,5 +134,10 @@
                 <Font name="Bookman Old Style Bold" size="22.0" />
             </font>
         </Button>
+      <Text fx:id="checkCorrectnessText" fill="RED" layoutX="511.0" layoutY="302.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Check data correctness" visible="false">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Text>
     </children>
 </AnchorPane>
