--- a/Lab3/src/main/resources/ru/nsu/gorin/lab3/view/GameWindow.fxml
+++ b/Lab3/src/main/resources/ru/nsu/gorin/lab3/view/GameWindow.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="768.0" style="-fx-background-color: #c0c0c0; -fx-border-color: #000000; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nsu.gorin.lab3.controllers.GameWindowController">
+<AnchorPane prefHeight="500.0" prefWidth="768.0" style="-fx-background-color: #c0c0c0; -fx-border-color: #000000; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nsu.gorin.lab3.viewControllers.GameWindowController">
    <children>
       <BorderPane fx:id="borderPane" layoutX="14.0" layoutY="25.0" prefHeight="463.0" prefWidth="746.0" AnchorPane.topAnchor="20.0">
          <center>
