--- a/Lab3/src/main/resources/ru/nsu/gorin/lab3/view/StatsWindow.fxml
+++ b/Lab3/src/main/resources/ru/nsu/gorin/lab3/view/StatsWindow.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="768.0" style="-fx-background-color: #c0c0c0; -fx-border-color: #000000; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nsu.gorin.lab3.controllers.StatsWindowController">
+<AnchorPane prefHeight="500.0" prefWidth="768.0" style="-fx-background-color: #c0c0c0; -fx-border-color: #000000; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nsu.gorin.lab3.viewControllers.StatsWindowController">
     <children>
       <TabPane layoutX="6.0" layoutY="6.0" prefHeight="488.0" prefWidth="762.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
